2003-03-14  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/net/if.c (if_attach): Removed printf which causes the
	ethernet device to become corrupt. At this point the app driver
	has started but not completed taking over from the redboot
	driver. It is unsafe for redboot to use the ethernet device.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/freebsd_net.cdl: Fix doc link.

2003-02-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/freebsd_net.cdl: Remove unused NBPFILTER and BRIDGE CDL options.

2003-02-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/freebsd.sgml: new_net template is now just "net".

2003-02-12  Jani Monoses  <jani@iv.ro>

	* src/sys/kern/sockio.c: bsd_getinfo/bsd_setinfo should have
	void * args. Silences warnings.
	* src/sys/kern/uipc_socket.c (sopoll): Use __FUNCTION__ correctly
	for GCC 3.x.
	* src/sys/net/if_ethersubr.c: Put comments for stuff after endifs
	to silence warnings.
	* src/sys/net/if_loop.c: Ditto.

2003-02-04  Gary Thomas  <gary@mlbassoc.com>

	* include/sys/bsdtypes.h: Workaround when building with new
	Linux compatability package (which over-defines some symols
	defined in this module).

2002-12-03  Gary Thomas  <gthomas@ecoscentric.com>

	* src/ecos/support.c (show_network_tables): New function to
	print information about network tables (interfaces, routing).

2002-11-12  Gary Thomas  <gary@mlbassoc.com>

	* src/ecos/timeout.c (callout_reset): Check for finding the
	correct "delta" was wrong - only used with asserts enabled.

	* include/sys/uio.h: Compatability wrapper to expose 'iovec'
	functions - used by many network programs.

2002-11-04  Gary Thomas  <gthomas@ecoscentric.com>

	* src/sys/net/if.c (if_attach): Moved check for ifq_maxlen to
	this function since it can't be checked until the device comes
	online, which may not be a sysinit time for PCMCIA devices.

2002-11-03  Gary Thomas  <gthomas@ecoscentric.com>

	* src/sys/kern/sockio.c (bsd_getname): Fix error where getsockname()